# Gmail_Quickstart

./: .gitignore  README.md  main.py  pyproject.toml  readgmail.py
activeMQ deployment script/: deploy_activeMQ_docker.sh
logger/: LOGGING_USAGE.md  example_logging.py  logger_config.py
messaging/: producer.py
models/: __init__.py
